--- a/pages/10234.html
+++ b/pages/10234.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1042,7 +1042,9 @@ margin-left: 0em;
 
 <p>A <em>proton</em> is a <a class='existingWikiWord' href='/nlab/show/bound+state'>bound state</a> of three <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, hence a <a class='existingWikiWord' href='/nlab/show/baryon'>baryon</a>.</p>
 
-<p>The bound states of <a class='existingWikiWord' href='/nlab/show/proton'>protons</a> and <a class='existingWikiWord' href='/nlab/show/neutron'>neutrons</a> are called <a class='existingWikiWord' href='/nlab/show/nucleus+%28physics%29'>nuclei</a>, the core of <a class='existingWikiWord' href='/nlab/show/atom'>atoms</a>.</p>
+<p>The bound states of <a class='existingWikiWord' href='/nlab/show/proton'>protons</a> and <a class='existingWikiWord' href='/nlab/show/neutron'>neutrons</a> are called <a class='existingWikiWord' href='/nlab/show/nucleus+%28physics%29'>nuclei</a>, the core of <a class='existingWikiWord' href='/nlab/show/atom'>atoms</a>. The proton alone is the nucleus of the <a class='existingWikiWord' href='/nlab/show/hydrogen+atom'>hydrogen atom</a>.</p>
+
+<p>In the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a> the proton is stable, and <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> highly constrains possible rare <a class='existingWikiWord' href='/nlab/show/proton+decay'>proton decay</a> (see there). But some <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a> beyond the standard model (notably many, but not all, <a class='existingWikiWord' href='/nlab/show/GUT'>GUT</a> <a class='existingWikiWord' href='/nlab/show/model+%28in+theoretical+physics%29'>models</a>) do imply rare <a class='existingWikiWord' href='/nlab/show/proton+decay'>proton decay</a>.</p>
 
 <h2 id='properties'>Properties</h2>
 
@@ -1211,14 +1213,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 30, 2017 05:15:54 
+  Revised on December 28, 2017 07:39:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/proton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/proton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/proton" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/proton/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/proton" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/proton" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
