--- a/pages/10304.html
+++ b/pages/10304.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -899,7 +899,19 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#related_entries'>Related entries</a></li><li><a href='#relation_to_mathematical_proof'>Relation to mathematical proof</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#experiments'>Experiments</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#relation_to_mathematical_proof'>Relation to mathematical proof</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='experiments'>Experiments</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Super-Kamiokande'>Super-Kamiokande</a></p>
+</li>
+</ul>
+
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
@@ -916,10 +928,6 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, <a class='existingWikiWord' href='/nlab/show/LIGO'>LIGO</a></p>
-</li>
-
-<li>
 <p><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, <a class='existingWikiWord' href='/nlab/show/standard+model+of+cosmology'>standard model of cosmology</a></p>
 </li>
 </ul>
@@ -928,9 +936,7 @@ margin-left: 0em;
 
 <p>In (<a href='JaffeQuinn93'>Jaffe-Quinn 93, p. 2</a>) it was claimed that</p>
 
-<blockquote>
-<p>the role of rigorous <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> in mathematics is functionally <a class='existingWikiWord' href='/nlab/show/analogy'>analogous</a> to the role of <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> in the natural sciences</p>
-</blockquote>
+<p>&gt; the role of rigorous <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> in mathematics is functionally <a class='existingWikiWord' href='/nlab/show/analogy'>analogous</a> to the role of <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> in the natural sciences</p>
 
 <p>Responses to that claim may be found <a href='http://arxiv.org/abs/math/9404229'>here</a>.</p>
 
@@ -963,14 +969,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 10, 2016 08:03:19 
+  Revised on December 28, 2017 07:27:36 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (86.187.95.22)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/experimental+observation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/experimental+observation/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/experimental+observation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/experimental+observation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/experimental+observation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/experimental+observation/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/experimental+observation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/experimental+observation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
