--- a/pages/18886.html
+++ b/pages/18886.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      LHC in nLab
+      Super-Kamiokande in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      LHC
+      Super-Kamiokande
   </h1>
 
 
@@ -308,66 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#description'>Description</a></li><li><a href='#properties'>Properties</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='description'>Description</h2>
+    <p>An <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> designed for detection and analysis of <a class='existingWikiWord' href='/nlab/show/neutrino'>neutrinos</a>, also <a class='existingWikiWord' href='/nlab/show/proton+decay'>proton decay</a>.</p>
 
-<p>An <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiment</a> in <a class='existingWikiWord' href='/nlab/show/particle+physics'>particle physics</a> measuring the details of the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>. Detected the <a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a>.</p>
+<ul>
+<li>
+<p><a href='http://www-sk.icrr.u-tokyo.ac.jp/sk/index-e.html'>webpage</a></p>
+</li>
 
-<h2 id='properties'>Properties</h2>
-
-<p>Resolution about <math class='maruku-mathml' display='inline' id='mathml_f177ece72132bfd9c506f00cf90d4f7656240120_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mn>10</mn> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>20</mn></mrow></msup><mi>m</mi><mo>≃</mo><mn>10</mn></mrow><annotation encoding='application/x-tex'>10^{-20}m \simeq 10</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/TeV'>TeV</a> ad currently reached <math class='maruku-mathml' display='inline' id='mathml_f177ece72132bfd9c506f00cf90d4f7656240120_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>≃</mo><mn>7</mn><mi>TeV</mi></mrow><annotation encoding='application/x-tex'>\simeq 7 TeV</annotation></semantics></math> (e.g. <a href='#Mazumdar'>Mazumdar, slide 7</a>)</p>
+<li>
+<p><a href='https://en.wikipedia.org/wiki/Super-Kamiokande'>Wikipedia entry</a></p>
+</li>
+</ul>
 
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a>, <a class='existingWikiWord' href='/nlab/show/Super-Kamiokande'>Super-Kamiokande</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Higgs+boson'>Higgs boson</a></p>
-</li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<ul id='Mazumdar'>
-<li>
-<p>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/CERN'>CERN</a></em></p>
-</li>
-
-<li>
-<p>Kajari Mazumdar, <em>Essentials of the LHC</em> (<a href='http://www.tifr.res.in/~mazumdar/talks/glbrg2.pdf'>pdf</a>)</p>
-</li>
-</ul>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/John+Ellis'>John Ellis</a>, <em>Summary of the Nobel Symposium on LHC Results</em> (<a href='http://arxiv.org/abs/1309.3549'>arXiv:1309.3549</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, <a class='existingWikiWord' href='/nlab/show/LIGO-Virgo'>LIGO</a></li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on December 28, 2017 07:28:32 
+  Created on December 28, 2017 07:28:07 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/LHC" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/LHC/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/LHC" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/LHC" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Super-Kamiokande" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/LHC" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Super-Kamiokande" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/LHC" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Super-Kamiokande" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/LHC" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Super-Kamiokande" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
