--- a/pages/8174.html
+++ b/pages/8174.html
@@ -393,7 +393,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a>, <a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/chain+map'>chain map</a></p>
 </li>
 
 <li>
@@ -406,9 +406,21 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology and cohomology</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-isomorphism'>quasi-isomorphism</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homological+resolution'>homological resolution</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cochain+on+a+simplicial+set'>simplicial homology</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology</a></p>
+</li>
 </ul>
 </li>
 
@@ -620,7 +632,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Aldridge+Bousfield'>Aldridge Bousfield</a>, <a class='existingWikiWord' href='/nlab/show/Daniel+Kan'>Daniel Kan</a>, <em>A second quadrant homotopy spectral sequence</em>, Transactions of the American Mathematical Society Vol. 177, Mar., 1973</p>
+<p><a class='existingWikiWord' href='/nlab/show/Aldridge+Bousfield'>Aldridge Bousfield</a>, <a class='existingWikiWord' href='/nlab/show/Daniel+Kan'>Daniel Kan</a>, <em>A second quadrant homotopy spectral sequence</em>, Transactions of the American Mathematical Society Vol. 177, Mar., 1973 (<a href='http://www.ams.org/journals/tran/1973-177-00/S0002-9947-1973-0372859-6/S0002-9947-1973-0372859-6.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -661,14 +673,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March  1, 2016 13:29:24 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.180)
+  Revised on December 28, 2017 07:17:45 
+  by <a class="existingWikiWord" href="/nlab/show/Dexter+Chua">Dexter Chua</a>
+  (193.60.93.97)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bousfield%E2%80%93Kan+spectral+sequence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bousfield%E2%80%93Kan+spectral+sequence/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Bousfield%E2%80%93Kan+spectral+sequence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bousfield%E2%80%93Kan+spectral+sequence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bousfield%E2%80%93Kan+spectral+sequence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bousfield%E2%80%93Kan+spectral+sequence/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Bousfield%E2%80%93Kan+spectral+sequence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bousfield%E2%80%93Kan+spectral+sequence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
