--- a/pages/4276.html
+++ b/pages/4276.html
@@ -410,27 +410,29 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a>,</p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Hadamard state</a></p>
 </li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a></p>
+</ul>
 </li>
 </ul>
 </li>
@@ -451,16 +453,18 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>Wick algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/canonical+commutation+relation'>canonical commutation relations</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+relation'>Weyl relations</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
+</li>
 </ul>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Fock+space'>Fock space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Wick%27s+lemma'>Wick&#39;s lemma</a></p>
 </li>
 </ul>
 
@@ -555,6 +559,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></li>
+</ul>
 </li>
 
 <li>
@@ -610,14 +618,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on December 23, 2017 15:50:13 
+  Revised on December 28, 2017 10:14:31 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (85.195.104.171)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT+and+operator+algebra+contents" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT+and+operator+algebra+contents/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/AQFT+and+operator+algebra+contents" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT+and+operator+algebra+contents" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
