--- a/pages/18879.html
+++ b/pages/18879.html
@@ -322,6 +322,10 @@ margin-left: 0em;
 
 <h2 id='references'>References</h2>
 
+<ul>
+<li id='Duetsch18'><a class='existingWikiWord' href='/nlab/show/Michael+D%C3%BCtsch'>Michael Dütsch</a>, def 3.19 of <em><a class='existingWikiWord' href='/nlab/show/From+classical+field+theory+to+perturbative+quantum+field+theory'>From classical field theory to perturbative quantum field theory</a></em>, 2018</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -330,17 +334,21 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Created on December 22, 2017 18:11:13 
+  Revised on December 28, 2017 16:25:02 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/scale+transformation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/scale+transformation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/scale+transformation/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/scale+transformation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/scale+transformation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
